build: annotate platform-specific code
Annotate any OS or platform specific code with the new
`(Un)SupportedOSPlatform(Guard)` attributes and update various platform
util methods to use the `OperatingSystem.Is<platform>` methods.

This will help ensure we're not missing any OS checks in the future.

For test projects we ignore these warnings since we're using skipping
Xunit tests that are not applicable for the current platform already,
making these warnings just noise.

Signed-off-by: Matthew John Cheetham <mjcheetham@outlook.com>

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -34,4 +34,9 @@
     </ItemGroup>
   </Target>
 
+  <PropertyGroup>
+    <!-- Ignore platform API compatibilty checks in test projects -->
+    <NoWarn Condition="'$(IsTestProject)'=='true'">$(NoWarn);CA1416</NoWarn>
+  </PropertyGroup>
+
 </Project>
